# fastapi-rate-limiter

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
fastapi_rate_limiter/: __init__.py  config.py  middleware.py  utils.py
tests/: test_rate_limiter.py
