[project]
name = "fastapi-rate-limiter"
version = "0.1.0"
description = "Simple, configurable token-bucket rate limiter middleware for FastAPI"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fastapi", "rate-limiter", "middleware", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.68.0",
    "starlette>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fastapi-rate-limiter"
Repository = "https://github.com/yourusername/fastapi-rate-limiter"
Issues = "https://github.com/yourusername/fastapi-rate-limiter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"